--- a/yassg/themes/simple/templates/base.html
+++ b/yassg/themes/simple/templates/base.html
@@ -11,7 +11,7 @@
     <h1><a href="{{ SITEURL }}">{{ SITENAME }} <strong>{{ SLOGAN }}</strong
             ></a></h1>
 </header><!-- /#banner -->
-
+{% endblock %}
 {% block content %}
 {% endblock %}
 <footer id="contentinfo" class="body">
