Copy active theme

--- a/yassg/themes/simple/templates/base.html
+++ b/yassg/themes/simple/templates/base.html
@@ -17,7 +17,7 @@
 {% endblock %}
 <footer id="contentinfo" class="body">
     <address id="about" class="vcard body">
-        Powered by <a href="http://github.com/aesptux/yassg"><b>yassg</a>.</b>
+        Powered by <a href="http://github.com/aesptux/yassg"><b>yassg.</b></a>
     </address><!-- /#about -->
 </footer><!-- /#contentinfo -->
 </body>
